<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/s2Black"
    tools:context=".SecondActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="344dp"
        android:layout_height="208dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/MainBlock"
            android:layout_width="344dp"
            android:layout_height="208dp">









            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/category"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/PinkButton"/>

            <ImageButton
                android:id="@+id/heart"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/white"
                android:onClick="onLikeButtonClick"
                android:src="@drawable/ic_icon_unlike"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/todo" />
            <TextView
                android:id="@+id/text_view_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/MainText"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/text_view_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black"
                android:text="@string/price"
                android:textSize="12sp"
                android:paddingBottom="10dp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/text_view_price"
                app:layout_constraintEnd_toEndOf="@+id/text_view_price"
                app:layout_constraintTop_toTopOf="@+id/linear_layout_icons"
                app:layout_constraintBottom_toBottomOf="@+id/linear_layout_icons"
                android:text="@string/free"
                android:fontFamily="@font/sfprotext_medium"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_participants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black"
                android:text="@string/participants"
                android:textSize="12sp"
                android:paddingBottom="10dp"
                />

            <TextView
                android:id="@+id/text_view_accessibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/accessibility"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:paddingBottom="10dp"

                />

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="70dp"
                android:layout_height="10dp"
                app:layout_constraintStart_toStartOf="@+id/text_view_accessibility"
                app:layout_constraintEnd_toEndOf="@+id/text_view_accessibility"
                app:layout_constraintTop_toTopOf="@+id/linear_layout_icons"
                app:layout_constraintBottom_toBottomOf="@+id/linear_layout_icons"
                android:progress="100"
                android:progressDrawable="@drawable/ic_progress_bar"  />

            <LinearLayout
                android:id="@+id/linear_layout_icons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/text_view_participants"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_icon_1"
                    android:importantForAccessibility="no" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/ic_icon_2"
                    android:importantForAccessibility="no" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/ic_icon_3"
                    android:importantForAccessibility="no" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/ic_icon_4"
                    android:importantForAccessibility="no" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_next"
        android:onClick="onNextButtonClick"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintStart_toStartOf="@id/cardView"
        app:layout_constraintEnd_toEndOf="@id/cardView"
        android:layout_marginTop="28dp"
        android:layout_width="344dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="@drawable/ic_bg_blue_button"
        android:layout_height="47dp" />
    <TextView
        android:id="@+id/text_2"
        android:text="@string/price_2"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/button_next"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view_category"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toStartOf="@+id/text_view_accessibility_2"
        app:layout_constraintTop_toBottomOf="@+id/button_next"
        android:layout_marginRight="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <RelativeLayout
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_category"
        app:layout_constraintStart_toStartOf="@id/text_view_category"
        app:layout_constraintEnd_toStartOf="@id/text_2"
        android:layout_marginEnd="10dp"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_bg_spinner"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:spinnerMode="dropdown" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@drawable/ic_drop"
            android:importantForAccessibility="no" />

    </RelativeLayout>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/range_slider1"
        app:layout_constraintStart_toStartOf="@id/text_2"
        app:layout_constraintTop_toBottomOf="@id/text_2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:valueFrom="0"
        android:valueTo="100"
        app:trackColorActive="@color/s2Blue_track"
        app:trackColorInactive="@color/white"
        app:thumbColor="@color/purple"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/text_view_accessibility_2"
        android:text="@string/accessibility"
        android:textColor="@color/white"
        android:layout_marginTop="36dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/range_slider1"
        app:layout_constraintStart_toStartOf="@id/text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/range_slider2"
        app:layout_constraintStart_toStartOf="@id/text_2"
        app:layout_constraintTop_toBottomOf="@id/text_view_accessibility_2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:valueFrom="0"
        android:valueTo="100"
        app:trackColorActive="@color/s2Blue_track"
        app:trackColorInactive="@color/white"
        app:thumbColor="@color/purple"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText" />

</androidx.constraintlayout.widget.ConstraintLayout>